@@ -38,6 +38,7 @@
     <Compile Include="NSString.cs" />
     <Compile Include="NSSet.cs" />
     <Compile Include="UID.cs" />
+    <Compile Include="NSDate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
